--- a/packages.bib
+++ b/packages.bib
@@ -7,12 +7,118 @@
   url = {https://www.R-project.org/},
 }
 
+@Manual{R-Biobase,
+  title = {Biobase: Base functions for Bioconductor},
+  author = {R. Gentleman and V. Carey and M. Morgan and S. Falcon},
+  year = {2022},
+  note = {R package version 2.56.0},
+  url = {https://bioconductor.org/packages/Biobase},
+}
+
+@Manual{R-BiocGenerics,
+  title = {BiocGenerics: S4 generic functions used in Bioconductor},
+  author = {The Bioconductor Dev Team},
+  year = {2022},
+  note = {R package version 0.42.0},
+  url = {https://bioconductor.org/packages/BiocGenerics},
+}
+
+@Manual{R-BiocParallel,
+  title = {BiocParallel: Bioconductor facilities for parallel evaluation},
+  author = {Martin Morgan and Jiefei Wang and Valerie Obenchain and Michel Lang and Ryan Thompson and Nitesh Turaga},
+  year = {2022},
+  note = {R package version 1.30.3},
+  url = {https://github.com/Bioconductor/BiocParallel},
+}
+
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2023},
   note = {R package version 0.34},
   url = {https://CRAN.R-project.org/package=bookdown},
+}
+
+@Manual{R-Cairo,
+  title = {Cairo: R Graphics Device using Cairo Graphics Library for Creating
+High-Quality Bitmap (PNG, JPEG, TIFF), Vector (PDF, SVG,
+PostScript) and Display (X11 and Win32) Output},
+  author = {Simon Urbanek and Jeffrey Horner},
+  year = {2022},
+  note = {R package version 1.6-0},
+  url = {http://www.rforge.net/Cairo/},
+}
+
+@Manual{R-DNAcopy,
+  title = {DNAcopy: DNA copy number data analysis},
+  author = {Venkatraman E. Seshan and Adam Olshen},
+  year = {2022},
+  note = {R package version 1.70.0},
+}
+
+@Manual{R-fastICA,
+  title = {fastICA: FastICA Algorithms to Perform ICA and Projection Pursuit},
+  author = {J L Marchini and C Heaton and B D Ripley},
+  year = {2021},
+  note = {R package version 1.2-3},
+  url = {https://CRAN.R-project.org/package=fastICA},
+}
+
+@Manual{R-gdsfmt,
+  title = {gdsfmt: R Interface to CoreArray Genomic Data Structure (GDS) Files},
+  author = {Xiuwen Zheng and Stephanie Gogarten and Jean-loup Gailly and Mark Adler and Yann Collet and xz contributors},
+  year = {2022},
+  note = {R package version 1.32.0},
+  url = {http://github.com/zhengxwen/gdsfmt},
+}
+
+@Manual{R-genefilter,
+  title = {genefilter: methods for filtering genes from high-throughput
+experiments},
+  author = {Robert Gentleman and Vincent J. Carey and Wolfgang Huber and Florian Hahne},
+  year = {2022},
+  note = {R package version 1.78.0},
+}
+
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2023},
+  note = {R package version 3.4.2},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra},
+}
+
+@Manual{R-illuminaio,
+  title = {illuminaio: Parsing Illumina Microarray Output Files},
+  author = {Keith Baggerly and Henrik Bengtsson and Kasper Daniel Hansen and Matt Ritchie and Mike L. Smith},
+  year = {2022},
+  note = {R package version 0.38.0},
+  url = {https://github.com/HenrikBengtsson/illuminaio},
+}
+
+@Manual{R-isva,
+  title = {isva: Independent Surrogate Variable Analysis},
+  author = {Andrew E Teschendorff},
+  year = {2017},
+  note = {R package version 1.9},
+  url = {https://CRAN.R-project.org/package=isva},
+}
+
+@Manual{R-JADE,
+  title = {JADE: Blind Source Separation Methods Based on Joint Diagonalization
+and Some BSS Performance Criteria},
+  author = {Klaus Nordhausen and Jean-Francois Cardoso and Jari Miettinen and Hannu Oja and Esa Ollila and Sara Taskinen},
+  year = {2020},
+  note = {R package version 2.0-3},
+  url = {https://CRAN.R-project.org/package=JADE},
 }
 
 @Manual{R-knitr,
@@ -23,12 +129,236 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-limma,
+  title = {limma: Linear Models for Microarray Data},
+  author = {Gordon Smyth and Yifang Hu and Matthew Ritchie and Jeremy Silver and James Wettenhall and Davis McCarthy and Di Wu and Wei Shi and Belinda Phipson and Aaron Lun and Natalie Thorne and Alicia Oshlack and Carolyn {de Graaf} and Yunshun Chen and Mette Langaas and Egil Ferkingstad and Marcus Davy and Francois Pepin and Dongseok Choi},
+  year = {2022},
+  note = {R package version 3.52.4},
+  url = {http://bioinf.wehi.edu.au/limma},
+}
+
+@Manual{R-lme4,
+  title = {lme4: Linear Mixed-Effects Models using Eigen and S4},
+  author = {Douglas Bates and Martin Maechler and Ben Bolker and Steven Walker},
+  year = {2022},
+  note = {R package version 1.1-30},
+  url = {https://github.com/lme4/lme4/},
+}
+
+@Manual{R-lmtest,
+  title = {lmtest: Testing Linear Regression Models},
+  author = {Torsten Hothorn and Achim Zeileis and Richard W. Farebrother and Clint Cummins},
+  year = {2022},
+  note = {R package version 0.9-40},
+  url = {https://CRAN.R-project.org/package=lmtest},
+}
+
+@Manual{R-markdown,
+  title = {markdown: Render Markdown with commonmark},
+  author = {Yihui Xie and JJ Allaire and Jeffrey Horner},
+  year = {2023},
+  note = {R package version 1.7},
+  url = {https://github.com/rstudio/markdown},
+}
+
+@Manual{R-MASS,
+  title = {MASS: Support Functions and Datasets for Venables and Ripley's MASS},
+  author = {Brian Ripley},
+  year = {2022},
+  note = {R package version 7.3-57},
+  url = {http://www.stats.ox.ac.uk/pub/MASS4/},
+}
+
+@Manual{R-Matrix,
+  title = {Matrix: Sparse and Dense Matrix Classes and Methods},
+  author = {Douglas Bates and Martin Maechler and Mikael Jagan},
+  year = {2022},
+  note = {R package version 1.5-1},
+  url = {https://CRAN.R-project.org/package=Matrix},
+}
+
+@Manual{R-matrixStats,
+  title = {matrixStats: Functions that Apply to Rows and Columns of Matrices (and to
+Vectors)},
+  author = {Henrik Bengtsson},
+  year = {2022},
+  note = {R package version 0.62.0},
+  url = {https://github.com/HenrikBengtsson/matrixStats},
+}
+
+@Manual{R-meffil,
+  title = {meffil: Efficient algorithms for DNA methylation},
+  author = {Matthew Suderman and Gibran Hemani and Josine Min},
+  year = {2023},
+  note = {R package version 1.3.6},
+  url = {https://github.com/perishky/meffil},
+}
+
+@Manual{R-mgcv,
+  title = {mgcv: Mixed GAM Computation Vehicle with Automatic Smoothness
+Estimation},
+  author = {Simon Wood},
+  year = {2022},
+  note = {R package version 1.8-40},
+  url = {https://CRAN.R-project.org/package=mgcv},
+}
+
+@Manual{R-multcomp,
+  title = {multcomp: Simultaneous Inference in General Parametric Models},
+  author = {Torsten Hothorn and Frank Bretz and Peter Westfall},
+  year = {2022},
+  note = {R package version 1.4-20},
+  url = {https://CRAN.R-project.org/package=multcomp},
+}
+
+@Manual{R-mvtnorm,
+  title = {mvtnorm: Multivariate Normal and t Distributions},
+  author = {Alan Genz and Frank Bretz and Tetsuhisa Miwa and Xuefei Mi and Torsten Hothorn},
+  year = {2021},
+  note = {R package version 1.1-3},
+  url = {http://mvtnorm.R-forge.R-project.org},
+}
+
+@Manual{R-nlme,
+  title = {nlme: Linear and Nonlinear Mixed Effects Models},
+  author = {José Pinheiro and Douglas Bates and {R Core Team}},
+  year = {2022},
+  note = {R package version 3.1-157},
+  url = {https://svn.r-project.org/R-packages/trunk/nlme/},
+}
+
+@Manual{R-plyr,
+  title = {plyr: Tools for Splitting, Applying and Combining Data},
+  author = {Hadley Wickham},
+  year = {2022},
+  note = {R package version 1.8.7},
+  url = {https://CRAN.R-project.org/package=plyr},
+}
+
+@Manual{R-preprocessCore,
+  title = {preprocessCore: A collection of pre-processing functions},
+  author = {Ben Bolstad},
+  year = {2022},
+  note = {R package version 1.58.0},
+  url = {https://github.com/bmbolstad/preprocessCore},
+}
+
+@Manual{R-quadprog,
+  title = {quadprog: Functions to Solve Quadratic Programming Problems},
+  author = {Berwin A. Turlach and Andreas Weingessel},
+  year = {2019},
+  note = {R package version 1.5-8},
+  url = {https://CRAN.R-project.org/package=quadprog},
+}
+
+@Manual{R-qvalue,
+  title = {qvalue: Q-value estimation for false discovery rate control},
+  author = {John D. Storey and Andrew J. Bass and Alan Dabney and David Robinson},
+  year = {2022},
+  note = {R package version 2.28.0},
+  url = {http://github.com/jdstorey/qvalue},
+}
+
+@Manual{R-reshape2,
+  title = {reshape2: Flexibly Reshape Data: A Reboot of the Reshape Package},
+  author = {Hadley Wickham},
+  year = {2020},
+  note = {R package version 1.4.4},
+  url = {https://github.com/hadley/reshape},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2023},
   note = {R package version 2.23},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-RSpectra,
+  title = {RSpectra: Solvers for Large-Scale Eigenvalue and SVD Problems},
+  author = {Yixuan Qiu and Jiali Mei},
+  year = {2022},
+  note = {R package version 0.16-1},
+  url = {https://github.com/yixuan/RSpectra},
+}
+
+@Manual{R-sandwich,
+  title = {sandwich: Robust Covariance Matrix Estimators},
+  author = {Achim Zeileis and Thomas Lumley},
+  year = {2022},
+  note = {R package version 3.0-2},
+  url = {https://sandwich.R-Forge.R-project.org/},
+}
+
+@Manual{R-SmartSVA,
+  title = {SmartSVA: Fast and Robust Surrogate Variable Analysis},
+  author = {Jun Chen and Ehsan Behnam},
+  year = {2017},
+  note = {R package version 0.1.3},
+  url = {https://CRAN.R-project.org/package=SmartSVA},
+}
+
+@Manual{R-statmod,
+  title = {statmod: Statistical Modeling},
+  author = {Gordon Smyth and Lizhong Chen and Yifang Hu and Peter Dunn and Belinda Phipson and Yunshun Chen},
+  year = {2023},
+  note = {R package version 1.5.0},
+  url = {https://CRAN.R-project.org/package=statmod},
+}
+
+@Manual{R-survival,
+  title = {survival: Survival Analysis},
+  author = {Terry M Therneau},
+  year = {2022},
+  note = {R package version 3.3-1},
+  url = {https://github.com/therneau/survival},
+}
+
+@Manual{R-sva,
+  title = {sva: Surrogate Variable Analysis},
+  author = {Jeffrey T. Leek and W. Evan Johnson and Hilary S. Parker and Elana J. Fertig and Andrew E. Jaffe and Yuqing Zhang and John D. Storey and Leonardo Collado Torres},
+  year = {2022},
+  note = {R package version 3.44.0},
+}
+
+@Manual{R-TH.data,
+  title = {TH.data: TH's Data Archive},
+  author = {Torsten Hothorn},
+  year = {2022},
+  note = {R package version 1.1-1},
+  url = {https://CRAN.R-project.org/package=TH.data},
+}
+
+@Manual{R-zoo,
+  title = {zoo: S3 Infrastructure for Regular and Irregular Time Series (Z's
+Ordered Observations)},
+  author = {Achim Zeileis and Gabor Grothendieck and Jeffrey A. Ryan},
+  year = {2022},
+  note = {R package version 1.8-11},
+  url = {https://zoo.R-Forge.R-project.org/},
+}
+
+@Article{Biobase2015,
+  author = {W. Huber and V. J. Carey and R. Gentleman and S. Anders and M. Carlson and B. S. Carvalho and H. C. Bravo and S. Davis and L. Gatto and T. Girke and R. Gottardo and F. Hahne and K. D. Hansen and R. A. Irizarry and M. Lawrence and M. I. Love and J. MacDonald and V. Obenchain and A. K. {Ole's} and H. {Pag`es} and A. Reyes and P. Shannon and G. K. Smyth and D. Tenenbaum and L. Waldron and M. Morgan},
+  title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
+  journal = {Nature Methods},
+  year = {2015},
+  volume = {12},
+  number = {2},
+  pages = {115--121},
+  url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
+}
+
+@Article{BiocGenerics2015,
+  author = {{Huber} and {W.} and {Carey} and V. J. and {Gentleman} and {R.} and {Anders} and {S.} and {Carlson} and {M.} and {Carvalho} and B. S. and {Bravo} and H. C. and {Davis} and {S.} and {Gatto} and {L.} and {Girke} and {T.} and {Gottardo} and {R.} and {Hahne} and {F.} and {Hansen} and K. D. and {Irizarry} and R. A. and {Lawrence} and {M.} and {Love} and M. I. and {MacDonald} and {J.} and {Obenchain} and {V.} and {{Ole's}} and A. K. and {{Pag`es}} and {H.} and {Reyes} and {A.} and {Shannon} and {P.} and {Smyth} and G. K. and {Tenenbaum} and {D.} and {Waldron} and {L.} and {Morgan} and {M.}},
+  title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
+  journal = {Nature Methods},
+  year = {2015},
+  volume = {12},
+  number = {2},
+  pages = {115--121},
+  url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
 }
 
 @Book{bookdown2016,
@@ -39,6 +369,57 @@
   year = {2016},
   isbn = {978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Article{gdsfmt2012,
+  title = {A High-performance Computing Toolset for Relatedness and Principal Component Analysis of SNP Data},
+  author = {Xiuwen Zheng and David Levine and Jess Shen and Stephanie Gogarten and Cathy Laurie and Bruce Weir},
+  journal = {Bioinformatics},
+  year = {2012},
+  doi = {10.1093/bioinformatics/bts606},
+  volume = {28},
+  number = {24},
+  pages = {3326-3328},
+}
+
+@Article{gdsfmt2017,
+  title = {SeqArray -- A storage-efficient high-performance data format for WGS variant calls},
+  author = {Xiuwen Zheng and Stephanie Gogarten and Michael Lawrence and Adrienne Stilp and Matthew Conomos and Bruce Weir and Cathy Laurie and David Levine},
+  journal = {Bioinformatics},
+  year = {2017},
+  doi = {10.1093/bioinformatics/btx145},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+
+@Article{illuminaio2013,
+  author = {{Smith} and Mike L and {Baggerly} and Keith A and {Bengtsson} and {Henrik} and {Ritchie} and Matthew E and {Hansen} and Kasper D},
+  title = {{illuminaio: An open source IDAT parsing tool for Illumina microarrays}},
+  journal = {F1000Research},
+  year = {2013},
+  volume = {2},
+  number = {264},
+  doi = {10.12688/f1000research.2-264.v1},
+  url = {https://f1000research.com/articles/2-264},
+  pubmed = {24701342},
+}
+
+@Article{JADE2017,
+  title = {Blind Source Separation Based on Joint Diagonalization in {R}: The Packages {JADE} and {BSSasymp}},
+  author = {Jari Miettinen and Klaus Nordhausen and Sara Taskinen},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {76},
+  number = {2},
+  pages = {1--31},
+  doi = {10.18637/jss.v076.i02},
 }
 
 @Book{knitr2015,
@@ -62,6 +443,150 @@
   note = {ISBN 978-1466561595},
 }
 
+@Article{limma2015,
+  author = {Matthew E Ritchie and Belinda Phipson and Di Wu and Yifang Hu and Charity W Law and Wei Shi and Gordon K Smyth},
+  title = {{limma} powers differential expression analyses for {RNA}-sequencing and microarray studies},
+  journal = {Nucleic Acids Research},
+  year = {2015},
+  volume = {43},
+  number = {7},
+  pages = {e47},
+  doi = {10.1093/nar/gkv007},
+}
+
+@Article{lme42015,
+  title = {Fitting Linear Mixed-Effects Models Using {lme4}},
+  author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
+  journal = {Journal of Statistical Software},
+  year = {2015},
+  volume = {67},
+  number = {1},
+  pages = {1--48},
+  doi = {10.18637/jss.v067.i01},
+}
+
+@Article{lmtest2002,
+  title = {Diagnostic Checking in Regression Relationships},
+  author = {Achim Zeileis and Torsten Hothorn},
+  journal = {R News},
+  year = {2002},
+  volume = {2},
+  number = {3},
+  pages = {7--10},
+  url = {https://CRAN.R-project.org/doc/Rnews/},
+}
+
+@Book{MASS2002,
+  title = {Modern Applied Statistics with S},
+  author = {W. N. Venables and B. D. Ripley},
+  publisher = {Springer},
+  edition = {Fourth},
+  address = {New York},
+  year = {2002},
+  note = {ISBN 0-387-95457-0},
+  url = {https://www.stats.ox.ac.uk/pub/MASS4/},
+}
+
+@Article{mgcv2011,
+  title = {Fast stable restricted maximum likelihood and marginal 
+likelihood estimation of semiparametric generalized linear models},
+  journal = {Journal of the Royal Statistical Society (B)},
+  volume = {73},
+  number = {1},
+  pages = {3-36},
+  year = {2011},
+  author = {S. N. Wood},
+}
+
+@Article{mgcv2016,
+  title = {Smoothing parameter and model selection for general smooth models (with discussion)},
+  author = {S.N. Wood and {N.} and {Pya} and B. S{"a}fken},
+  journal = {Journal of the American Statistical Association},
+  year = {2016},
+  pages = {1548-1575},
+  volume = {111},
+}
+
+@Article{mgcv2004,
+  title = {Stable and efficient multiple smoothing parameter estimation for 
+         generalized additive models},
+  journal = {Journal of the American Statistical Association},
+  volume = {99},
+  number = {467},
+  pages = {673-686},
+  year = {2004},
+  author = {S. N. Wood},
+}
+
+@Book{mgcv2017,
+  title = {Generalized Additive Models: An Introduction with R},
+  year = {2017},
+  author = {S.N Wood},
+  edition = {2},
+  publisher = {Chapman and Hall/CRC},
+}
+
+@Article{mgcv2003,
+  title = {Thin-plate regression splines},
+  journal = {Journal of the Royal Statistical Society (B)},
+  volume = {65},
+  number = {1},
+  pages = {95-114},
+  year = {2003},
+  author = {S. N. Wood},
+}
+
+@Article{multcomp2008,
+  title = {Simultaneous Inference in General Parametric Models},
+  author = {Torsten Hothorn and Frank Bretz and Peter Westfall},
+  journal = {Biometrical Journal},
+  year = {2008},
+  volume = {50},
+  number = {3},
+  pages = {346--363},
+}
+
+@Book{mvtnorm2009,
+  title = {Computation of Multivariate Normal and t Probabilities},
+  author = {Alan Genz and Frank Bretz},
+  series = {Lecture Notes in Statistics},
+  year = {2009},
+  publisher = {Springer-Verlag},
+  address = {Heidelberg},
+  isbn = {978-3-642-01688-2},
+}
+
+@Book{nlme2000,
+  title = {Mixed-Effects Models in S and S-PLUS},
+  author = {José C. Pinheiro and Douglas M. Bates},
+  year = {2000},
+  publisher = {Springer},
+  address = {New York},
+  doi = {10.1007/b98882},
+}
+
+@Article{plyr2011,
+  title = {The Split-Apply-Combine Strategy for Data Analysis},
+  author = {Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {1},
+  pages = {1--29},
+  url = {https://www.jstatsoft.org/v40/i01/},
+}
+
+@Article{reshape22007,
+  title = {Reshaping Data with the {reshape} Package},
+  author = {Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2007},
+  volume = {21},
+  number = {12},
+  pages = {1--20},
+  url = {http://www.jstatsoft.org/v21/i12/},
+}
+
 @Book{rmarkdown2018,
   title = {R Markdown: The Definitive Guide},
   author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
@@ -80,5 +605,124 @@
   year = {2020},
   isbn = {9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Article{sandwich2020,
+  title = {Various Versatile Variances: An Object-Oriented Implementation of Clustered Covariances in {R}},
+  author = {Achim Zeileis and Susanne K\"oll and Nathaniel Graham},
+  journal = {Journal of Statistical Software},
+  year = {2020},
+  volume = {95},
+  number = {1},
+  pages = {1--36},
+  doi = {10.18637/jss.v095.i01},
+}
+
+@Article{sandwich2004,
+  title = {Econometric Computing with {HC} and {HAC} Covariance Matrix Estimators},
+  author = {Achim Zeileis},
+  journal = {Journal of Statistical Software},
+  year = {2004},
+  volume = {11},
+  number = {10},
+  pages = {1--17},
+  doi = {10.18637/jss.v011.i10},
+}
+
+@Article{sandwich2006,
+  title = {Object-Oriented Computation of Sandwich Estimators},
+  author = {Achim Zeileis},
+  journal = {Journal of Statistical Software},
+  year = {2006},
+  volume = {16},
+  number = {9},
+  pages = {1--16},
+  doi = {10.18637/jss.v016.i09},
+}
+
+@Article{statmod2016a,
+  author = {Goknur Giner and Gordon K. Smyth},
+  year = {2016},
+  title = {statmod: probability calculations for the inverse Gaussian distribution},
+  journal = {R Journal},
+  volume = {8},
+  number = {1},
+  pages = {339-351},
+}
+
+@Article{statmod2010a,
+  author = {Belinda Phipson and Gordon K. Smyth},
+  year = {2010},
+  title = {Permutation p-values should never be zero: calculating exact p-values when permutations are randomly drawn},
+  journal = {Statistical Applications in Genetics and Molecular Biology},
+  volume = {9},
+  number = {1},
+  pages = {Article 39},
+}
+
+@Article{statmod2009a,
+  author = {Yifang Hu and Gordon K. Smyth},
+  year = {2009},
+  title = {ELDA: extreme limiting dilution analysis for comparing depleted and enriched populations in stem cell and other assays},
+  journal = {Journal of Immunological Methods},
+  volume = {347},
+  number = {1},
+  pages = {70-78},
+}
+
+@Article{statmod2005a,
+  author = {Gordon K. Smyth},
+  title = {Optimization and nonlinear equations},
+  journal = {Encyclopedia of Biostatistics},
+  year = {2005},
+  publisher = {John Wiley and Sons, Ltd},
+  pages = {3088-3095},
+}
+
+@Article{statmod2005b,
+  author = {Gordon K. Smyth},
+  title = {Numerical integration},
+  journal = {Encyclopedia of Biostatistics},
+  year = {2005},
+  publisher = {John Wiley and Sons, Ltd},
+  pages = {3088-3095},
+}
+
+@Article{statmod2002a,
+  author = {Gordon K. Smyth},
+  year = {2002},
+  title = {An efficient algorithm for REML in heteroscedastic regression},
+  journal = {Journal of Computational and Graphical Statistics},
+  volume = {11},
+  pages = {836-847},
+}
+
+@Article{statmod1996a,
+  author = {Peter K. Dunn and Gordon K. Smyth},
+  year = {1996},
+  title = {Randomized quantile residuals},
+  journal = {J. Comput. Graph. Statist},
+  volume = {5},
+  pages = {236-244},
+}
+
+@Book{survival-book,
+  title = {Modeling Survival Data: Extending the {C}ox Model},
+  author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
+  year = {2000},
+  publisher = {Springer},
+  address = {New York},
+  isbn = {0-387-98784-3},
+}
+
+@Article{zoo2005,
+  title = {zoo: S3 Infrastructure for Regular and Irregular Time Series},
+  author = {Achim Zeileis and Gabor Grothendieck},
+  journal = {Journal of Statistical Software},
+  year = {2005},
+  volume = {14},
+  number = {6},
+  pages = {1--27},
+  doi = {10.18637/jss.v014.i06},
 }
 
