--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
-url: https://ewas-isgsummerschool.netlify.app/
+url: https://isglobal-brge.github.io/course_methylation/
 # cover-image: path to the social sharing image like images/cover.jpg
 description: |
   Module 1 of the ISGlobal Summer School
@@ -13,7 +13,7 @@ link-citations: yes
 df_print: paged
 ---
 
-```{r steup, include=FALSE}
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, fig.align = "center", fig.width = 6, fig.height = 4, cache = T)
 # automatically create a bib database for R packages
 knitr::write_bib(c(
